checkout form totel price and product name added, cart sidebar overflow issue fixed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -99,3 +99,8 @@ body{
   color: white;
   font-size: 70px;
 }
+.cart-text{
+  max-height: 400px;
+  overflow-y: scroll;
+
+}
